<resources>
    <string name="app_name">Poster</string>
    <string name="fragment_poster">Poster</string>
    <string name="fragment_buy_tickets">Buy Tickets</string>
    <string name="poster">Poster</string>
    <string name="about">About</string>
    <string name="return_tickets">Return</string>
    <string name="this_is_text_about_this_app">This is text about this app</string>
    <string name="text_about">The Internet was invented in the late 1960s by the US Defense Department’s Advanced
        Research Projects Agency. In 1969, there was a network of just four mainframe computers. A mainframe computer is
        a large, powerful computer, shared by many users. The idea of the electronic mailbox was born when users looked
        for a way to talk to each other electronically. By 1984,the Internet had begun to develop into the form we know
        today. Electronic mail is much faster than traditional mail, because once the message is typed out, it arrives
        in the electronic mail box of the recipient within minutes. It’s better to use e-mail to contact friends rather
        than phone them, because e-mail is cheaper for long distances than the phone. People can share their interests
        through the Internet and it makes it very easy to exchange ideas and information.
        The fax machine is a very convenient aid to contact companies and friends because messages are transmitted
        immediately. Fax machines work like photocopiers. They make a copy of a document and then send it down a
        telephone line to another fax machine. In this way they can send and receive information from each other. You
        can send any kind of thigs by fax, but it is more expensive than e-mail.
    </string>
    <string name="just_image">just image</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone number</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="buy">Buy</string>
    <string name="message">There are no sessions on this day</string>
    <string name="fn_cant_be_empty">Full name can\'t be empty</string>
    <string name="example">Example:+375 ** ***-**-**</string>
    <string name="wrong_email">Wrong e-mail</string>
    <string name="at_least_8">At least 8 characters</string>
    <string name="must_match_the_pass">Must match the password</string>
    <string name="you_have_successfully">You have successfully registered</string>
    <string name="invalid_field_values">Invalid field values</string>
    <string name="client_with_this_email_is">Client with this email is already registered</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="returning_tickets">Returning tickets</string>
    <string name="want_to_return_this_tickets">Are you want to return this tickets?</string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="email_cant_be">E-mail can\'t be empty</string>
    <string name="successfully_signed_in">You have successfully signed in</string>
    <string name="invalid_string_values">Invalid field values</string>
    <string name="wrong_email_or_pass">Wrong email or password</string>
    <string name="successfully_signed_out">You have successfully signed out</string>
    <string name="cinema">Cinema:</string>
    <string name="action_notify">action_notify</string>
</resources>
