<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel"
                  type="com.example.prpsapp.sign_in.SignInViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".sign_in.SignInFragment">


        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/scrollView3"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.0">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_mail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/emailLayout">

                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            app:email="@{viewModel}"
                            android:text="@={viewModel.email}"
                            android:id="@+id/email"
                    />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/passwordLayout"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent">
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            app:password="@{viewModel}"
                            android:text="@={viewModel.password}"
                            android:id="@+id/password"
                            android:layout_weight="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:text="@string/sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button5"
                        android:onClick="@{() -> viewModel.onClick()}"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
                <Button
                        android:text="@string/sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button6"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/button5" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>